[#1] Add combat modifiers

--- a/docs/desgin/battle/overview.adoc
+++ b/docs/desgin/battle/overview.adoc
@@ -2,4 +2,5 @@
 
 * See link:battlefield.adoc[Battlefield].
 * See link:units.adoc[Units].
+* See link:combat.adoc[Combat].
 * See link:programming.adoc[Programming].
